fix share button spacing

--- a/src/components/ShareButtons/style.scss
+++ b/src/components/ShareButtons/style.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: row;
 
+  margin-bottom: -0.6rem;
+
   * {
     margin-right: 0.1rem;
   }
